# Qt_Android_Qml_Myapp

./: .clangd  .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  Main.qml  PROJECT.md  main.cpp
ButtonComponents/: FlatButton.qml  IconButton.qml
Navi/: HomePage.qml  NavItem.qml  Page2.qml  Page3.qml  Page4.qml  qmldir
qml/App/components/: ResponsivePage.qml  ToolCard.qml
qml/App/pages/: CalculatorPage.qml  ConverterPage.qml  CountdownPage.qml  CurrencyPage.qml  DateCalculatorPage.qml  DigitalClockPage.qml  HomePage.qml  NotesPage.qml  QuickAccessPage.qml  RandomPickerPage.qml  StopwatchPage.qml  TipPage.qml  TodoPage.qml
qml/App/services/: Storage.js
qml/ButtonComponents/: MaterialButton.qml  ThreeDButton.qml  qmldir
qml/ComboBox/: CheckboxGroup.qml  ComboBoxStyled.qml  qmldir
qml/DigitalFlipClock/: DigitalFlipClock.qml
qml/DigitalFlipClock/Components/: TimeDisplay.qml  TimeSetPage.qml  TimeUnit.qml  qmldir
qml/Navi/: HomePage.qml  NavigationBar.qml  Page2.qml  Page3.qml  Page4.qml
